fix wide block horizontal scrolling

--- a/src/style.less
+++ b/src/style.less
@@ -63,6 +63,8 @@ body {
 
     background-color: var(--color-background);
     color: var(--color-text);
+
+    overflow-x: hidden; // fix a issue with wide block on windows to prevent horizonal scrolling
 }
 
 h1,
